--- a/green-conection/src/componentes/cabecalho/cabecalho.module.css
+++ b/green-conection/src/componentes/cabecalho/cabecalho.module.css
@@ -3,9 +3,9 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px 20px;
-    background-color: #f8f8f8;
+    background-color: var(--verde_escuro);
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-    gap: 20px;
+    gap: 15px;
   }
   
   .logo {
