--- a/green-conection/src/componentes/cabecalho/cabecalho.module.css
+++ b/green-conection/src/componentes/cabecalho/cabecalho.module.css
@@ -1,12 +1,15 @@
 .Cabecalho {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background-color: var(--verde_escuro);
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-    gap: 15px;
-  }
+  display: flex;
+  box-sizing: border-box;
+  width: 100vw;
+  align-items: center;
+  justify-content: space-between;
+  padding: 18px 50px;
+  background-color: var(--verde_escuro);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+  gap: 5px;
+}
+
   
   .logo {
     height: 40px;
@@ -14,8 +17,9 @@
   
   .link {
     text-decoration: none;
-    color: #333;
+    color: #ffffff;
     font-weight: 500;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   
   .search {
