--- a/green-conection/src/index.css
+++ b/green-conection/src/index.css
@@ -15,3 +15,11 @@
 body {
   background: var(--fundo);
 }
+
+body, html, #root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
