--- a/green-conection/src/componentes/cabecalho/cabecalho.module.css
+++ b/green-conection/src/componentes/cabecalho/cabecalho.module.css
@@ -12,13 +12,16 @@
 
   
   .logo {
-    height: 40px;
+    height: 65px;
+    width: 75px;
+    border-radius: 50%;
   }
   
   .link {
     text-decoration: none;
     color: #ffffff;
-    font-weight: 500;
+    font-size: larger;
+    font-weight: bolder;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   
@@ -31,8 +34,8 @@
   }
   
   .perfil {
-    height: 35px;
-    width: 35px;
+    height: 65px;
+    width: 65px;
     border-radius: 50%;
     object-fit: cover;
   }
