--- a/green-conection/src/componentes/Banner/banner.module.css
+++ b/green-conection/src/componentes/Banner/banner.module.css
@@ -1,21 +1,27 @@
 .Banner {
-    position: relative;
-    width: 100%;
-    height: 300px;
-    background-image: url('../../../public/images/elementos/Baner.jpg');
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .Texto {
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.6); /* fundo semitransparente */
-    color: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-  }
-  
+  position: relative;
+  width: 80%;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+.BannerImg {
+  width: 80%;
+  height: auto;
+  object-fit: cover;
+  display: block;
+  margin: 0 auto;
+}
+
+.Texto {
+  position: absolute;
+  top: 50%;
+  right: 15%; 
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: left;
+  max-width: 400px;
+}
