--- a/green-conection/src/componentes/Banner/banner.module.css
+++ b/green-conection/src/componentes/Banner/banner.module.css
@@ -6,8 +6,8 @@
 }
 
 .BannerImg {
-  width: 80%;
-  height: auto;
+  width: 75%;
+  height: 450px;
   object-fit: cover;
   display: block;
   margin: 0 auto;
@@ -16,7 +16,7 @@
 .Texto {
   position: absolute;
   top: 50%;
-  right: 15%; 
+  left: 15%; 
   transform: translateY(-50%);
   background-color: rgba(0, 0, 0, 0.6);
   color: white;
