--- a/green-conection/src/pages/cadastro.css
+++ b/green-conection/src/pages/cadastro.css
@@ -1,7 +1,7 @@
 .cadastro-container {
     background-color: #f1f1f1;
     height: 100vh;
-    padding: 30px;
+    padding: 0px;
     font-family: monospace;
     position: relative;
 }
@@ -26,7 +26,7 @@
 }
 
 .logo {
-    width: 100px;
+    width: 120px;
     margin-bottom: 10px;
 }
 
@@ -55,5 +55,37 @@
     font-size: 13px;
     margin: -8px 0 10px;
     text-align: left;
+}
+
+.confirmacao-container {
+    background-color: #f1f1f1;
+    height: 100vh;
+    padding: 30px;
+    font-family: monospace;
+    position: relative;
+}
+
+.box-confirmado {
+    background-color: #7eaf7c;
+    padding: 0px;
+    max-width: 550px;
+    margin: 65px auto 0;
+    border-radius: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 515px;
   }
-  
+
+.box-confirmado img {
+    width: 170px;
+    margin-bottom: 10px;
+}
+
+.box-confirmado p {
+    font-size: 33px;
+    font-style: italic;
+    margin: 10px 0 0;
+}
