--- a/green-conection/src/componentes/cabecalho/cabecalho.module.css
+++ b/green-conection/src/componentes/cabecalho/cabecalho.module.css
@@ -20,7 +20,7 @@
   text-decoration: none;
   color: #ffffff;
   font-size: larger;
-  font-weight: bolder;
+  font-weight: 600;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
